<resources>
    <string name="ws_key">8da3fe404852b2987901d2ccb4d3de97</string>
    <string name="app_name">Mushrooms</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="menu_actualizar">Update</string>
    <string name="menu_buscar">Search</string>
    <string name="menu_eliminar">Delete</string>
    <string name="menu_vista_normal">Normal View</string>
    <string name="menu_vista_satelite">Satellite View</string>
    <string name="menu_vista_terreno">Terrain View</string>
    <string name="menu_vista_hibrida">Hybrid View</string>
    <string name="btnSetas">MUSHROOMS</string>
    <string name="btnGaleria">GALLERY</string>
    <string name="btnTiempo">WEATHER</string>
    <string name="btnZona">MY ZONES</string>
    <string name="drawerSetas">Mushrooms</string>
    <string name="drawerGaleria">Gallery</string>
    <string name="drawerTiempo">Weather</string>
    <string name="drawerZonas">My Zones</string>
    <string name="drawerIdioma">Language: English</string>
    <string name="drawerAyuda">Help</string>
    <string name="drawerPoliticas">Privacy policies</string>
    <string name="totSetas">128 Mushrooms</string>
    <string name="txtUbicacion">To use this functionality, you must allow that the app access to the device location</string>
    <string name="txtFavoritas">Your list of favorite mushrooms is currently empty.\n\n
        To add/remove a mushroom to that list, you must make a long press on the desired mushroom.</string>
    <string name="txtPrecaución">Caution</string>
    <string name="titNombre">Name: </string>
    <string name="titNombreComun">Common Name: </string>
    <string name="titDescripcion">DESCRIPTION</string>
    <string name="titHabitat">HABITAT</string>
    <string name="titComestibilidad">EDIBILITY</string>
    <string name="titObservaciones">OBSERVATIONS</string>
    <string name="titProgressDialog">Connecting</string>
    <string name="txtProgressDialog">Connecting to the Server...</string>
    <string name="btnAceptar">Accept</string>
    <string name="titErrorDialog_1">Connection Error</string>
    <string name="titErrorDialog_2">Error about the City</string>
    <string name="txtErrorDialog_1">Failed to get Server data</string>
    <string name="txtErrorDialog_2">Internet connection required</string>
    <string name="txtIrAyuda">Click here, if you want to get help on the different parts that make up a mushroom...etc</string>
    <string name="tipo_seta_1">Edible</string>
    <string name="tipo_seta_2">With Caution</string>
    <string name="tipo_seta_3">No Culinary Interest</string>
    <string name="tipo_seta_4">Toxic</string>
    <string name="tipo_seta_5">Deadly</string>
    <string name="titTabLayout_1">Description</string>
    <string name="titTabLayout_2">Habitat &amp; Edibility</string>
    <string name="titTabLayout_3">Observations</string>
    <string name="titTabLayout_4">Gallery</string>
    <string name="titPantallaTiempo">Weather</string>
    <string name="titPantallaTiempo_2">Indicates City and Country</string>
    <string name="edit_localidad">City</string>
    <string name="edit_pais">Country</string>
    <string name="btn_aceptar">Accept</string>
    <string name="btn_cancelar">Cancel</string>
    <string name="tit_dialog_guardar">Save</string>
    <string name="txt_dialog_guardar">Do you want to save this City?</string>
    <string name="tit_progress_dialog">Do you want to save this City?...</string>
    <string name="txt_progress_dialog">Connecting to Meteorological Server...</string>
    <string name="errGeoLocalidad">The City could not be found</string>
    <string name="errGeoLocalidad2">Error, could not get data for that city</string>
    <string name="errFormLocalidad">You must enter the city and country</string>
    <string name="errWSTiempo">Failed to get Server data</string>
    <string name="diaSemana_1">Sunday</string>
    <string name="diaSemana_2">Monday</string>
    <string name="diaSemana_3">Tuesday</string>
    <string name="diaSemana_4">Wednesday</string>
    <string name="diaSemana_5">Thursday</string>
    <string name="diaSemana_6">Friday</string>
    <string name="diaSemana_7">Saturday</string>
    <string name="titPantallaZonas">My Zones</string>
    <string name="txtNoZonas">You currently have no saved a mushroom zone. If you want to add a new location
        press the button located at the bottom of the screen</string>
    <string name="btnSi">Yes</string>
    <string name="btnNo">No</string>
    <string name="titDialogUbicacionZona">GPS Disabled</string>
    <string name="txtDialogUbicacionZona">Do you want to go to the configuration screen to activate it?</string>
    <string name="titDialogBorrarZona">Delete Zone</string>
    <string name="txtDialogBorrarZona">Do you want to delete the selected zone?</string>
    <string name="titDialogBorrarZonas">Delete Zones</string>
    <string name="txtDialogBorrarZonas">Do you want to delete the selected zones?</string>
    <string name="txtErrorBorrarZonas">Error, Could not delete the Zone of the Database</string>
    <string name="titPantallaMapaNuevaZona">New Zone</string>
    <string name="txtDialogMapaNuevaZona">Do you want to save the position marked on the map?</string>
    <string name="txtErrorCoordenadas">Error, the coordinates of the indicated location could not be obtained</string>
    <string name="titPantallaMapaGPS">GPS</string>
    <string name="txtCuentaAtras">Getting location in</string>
    <string name="txtNuevaZonaGpsOK">The zone has been successfully saved</string>
    <string name="titDialogGPS">Searching for GPS...</string>
    <string name="txtNuevaConexionGps">Connecting with GPS...</string>
    <string name="txtConexionGpsCancelada">La conexión ha sido cancelada</string>
    <string name="titMarcadorPosicion">Actual Position</string>
    <string name="titPantallaDatosNuevaZona">New Zone</string>
    <string name="txtEditNombreNuevaZona">Zone Name</string>
    <string name="txtEditDescripcionNuevaZona">Zone Description </string>
    <string name="titMensajeOK">New Zone</string>
    <string name="txtMensajeOK">The data of the new zone has been saved correctly</string>
    <string name="titMensajeKO">Error</string>
    <string name="txtMensajeKO">The data of the new zone could not be saved</string>
    <string name="txtNombreVacio">You must indicate a zone name</string>
    <string name="txtErrorCambios">Error, data could not be saved</string>
    <string name="txtCambiosOK">Data Modification Correct</string>
    <string name="titPantallaAyuda">Help</string>
    <string name="titPartesSeta">Parts of a Mushroom</string>
    <string name="titTiposSombrero">Cap Types</string>
    <string name="titDesarrolloSeta">Cycle of a Mushroom </string>
    <string name="txtPantallaAyuda">Click on an image to see it in large size and be able to zoom on it.</string>
    <string name="titPantallaZoom_1">Mushroom Parts</string>
    <string name="titPantallaZoom_2">Types Caps</string>
    <string name="titPantallaZoom_3">Mushroom Development</string>
    <string name="banner_ad_unit_id">ca-app-pub-2712815213167664/2866527416</string>
        <string name="nombreSeta1">Agaricus Arvensis</string>
        <string name="nombre_comunSeta1">Horse Mushroom; Abrahams</string>
        <string name="nombre_ordenarSeta1">agaricus arvensis</string>
        <string name="comestibilidad_seta1">comestible</string>
        <string name="nombreSeta2">Agaricus Campestris</string>
        <string name="nombre_comunSeta2">Field Mushroom; Meadow Mushroom</string>
        <string name="nombre_ordenarSeta2">agaricus campestris</string>
        <string name="comestibilidad_seta2">comestible</string>
        <string name="nombreSeta3">Agaricus Xanthodermus</string>
        <string name="nombre_comunSeta3">Yellow Stainer</string>
        <string name="nombre_ordenarSeta3">agaricus xanthodermus</string>
        <string name="comestibilidad_seta3">toxica</string>
    <string name="nombreSeta4">Agrocybe Cylindracea</string>
    <string name="nombre_comunSeta4">Poplar Fieldcap</string>
    <string name="nombre_ordenarSeta4">agrocybe cylindracea</string>
    <string name="comestibilidad_seta4">comestible</string>
    <string name="nombreSeta5">Albatrellus Subrubescens</string>
    <string name="nombre_comunSeta5">--</string>
    <string name="nombre_ordenarSeta5">albatrellus subrubescens</string>
    <string name="comestibilidad_seta5">sin_interes</string>
    <string name="nombreSeta6">Amanita Caesarea</string>
    <string name="nombre_comunSeta6">Caesar\'s Mushroom</string>
    <string name="nombre_ordenarSeta6">amanita caesarea</string>
    <string name="comestibilidad_seta6">comestible</string>
    <string name="nombreSeta7">Amanita Muscaria</string>
    <string name="nombre_comunSeta7">Fly Agaric</string>
    <string name="nombre_ordenarSeta7">amanita muscaria</string>
    <string name="comestibilidad_seta7">toxica</string>
    <string name="nombreSeta8">Amanita Ovoidea</string>
    <string name="nombre_comunSeta8">Bearded Amanita; European Egg Amidella</string>
    <string name="nombre_ordenarSeta8">amanita ovoidea</string>
    <string name="comestibilidad_seta8">sin_interes</string>
    <string name="nombreSeta9">Amanita Phalloides</string>
    <string name="nombre_comunSeta9">Deathcap</string>
    <string name="nombre_ordenarSeta9">amanita phalloides</string>
    <string name="comestibilidad_seta9">mortal</string>
    <string name="nombreSeta10">Amanita Rubescens</string>
    <string name="nombre_comunSeta10">Blusher</string>
    <string name="nombre_ordenarSeta10">amanita rubescens</string>
    <string name="comestibilidad_seta10">precaucion</string>
    <string name="nombreSeta11">Amanita Submembranacea</string>
    <string name="nombre_comunSeta11">Peeling Paint Ringless Amanita</string>
    <string name="nombre_ordenarSeta11">amanita submembranacea</string>
    <string name="comestibilidad_seta11">precaucion</string>
    <string name="nombreSeta12">Armillaria Mellea</string>
    <string name="nombre_comunSeta12">Honey Fungus</string>
    <string name="nombre_ordenarSeta12">armillaria mellea</string>
    <string name="comestibilidad_seta12">sin_interes</string>
    <string name="nombreSeta13">Astraeus Hygrometricus</string>
    <string name="nombre_comunSeta13">Hygroscopic Earthstar, Barometer Earthstar, False Earthstar</string>
    <string name="nombre_ordenarSeta13">astraeus hygrometricus</string>
    <string name="comestibilidad_seta13">sin_interes</string>
    <string name="nombreSeta14">Auricularia Auricula-Judae</string>
    <string name="nombre_comunSeta14">Jelly Ear Fungus; Wood Ears; Tree Ears; Jelly Ears</string>
    <string name="nombre_ordenarSeta14">auricularia auricula-judae</string>
    <string name="comestibilidad_seta14">sin_interes</string>
    <string name="nombreSeta15">Baeospora Myosura</string>
    <string name="nombre_comunSeta15">Conifercone Cap</string>
    <string name="nombre_ordenarSeta15">baeospora myosura</string>
    <string name="comestibilidad_seta15">sin_interes</string>
    <string name="nombreSeta16">Boletus Edulis</string>
    <string name="nombre_comunSeta16">Cep; Porcini; Penny Bun Bolete</string>
    <string name="nombre_ordenarSeta16">boletus edulis</string>
    <string name="comestibilidad_seta16">comestible</string>
    <string name="nombreSeta17">Boletus Satanas</string>
    <string name="nombre_comunSeta17">Devil\'s Bolete; Satan\'s Bolete</string>
    <string name="nombre_ordenarSeta17">boletus satanas</string>
    <string name="comestibilidad_seta17">toxica</string>
    <string name="nombreSeta18">Calocybe Gambosa</string>
    <string name="nombre_comunSeta18">St George\'s Mushroom</string>
    <string name="nombre_ordenarSeta18">calocybe gambosa</string>
    <string name="comestibilidad_seta18">comestible</string>
    <string name="nombreSeta19">Calvatia Utriformis</string>
    <string name="nombre_comunSeta19">Mosaic Puffball</string>
</resources>