<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">

        <item android:id="@+id/drawer_opcion1"
            android:icon="@mipmap/flecha"
            android:title="@string/drawerSetas"/>

        <item android:id="@+id/drawer_opcion2"
            android:icon="@mipmap/flecha"
            android:title="@string/drawerGaleria"/>

        <item android:id="@+id/drawer_opcion3"
            android:icon="@mipmap/flecha"
            android:title="@string/drawerTiempo"/>

        <item android:id="@+id/drawer_opcion4"
            android:icon="@mipmap/flecha"
            android:title="@string/drawerZonas"/>

        <item android:id="@+id/drawer_opcion5"
            android:icon="@mipmap/flecha"
            android:title="@string/drawerIdioma"/>

        <item android:id="@+id/drawer_opcion6"
            android:icon="@mipmap/flecha"
            android:title="@string/drawerAyuda"/>

        <item android:id="@+id/drawer_opcion7"
            android:icon="@mipmap/flecha"
            android:title="@string/drawerPoliticas"/>

    </group>


</menu>