<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_insertar_datos_zona"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde_claro">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar_pantalla_insertar_datos_zona"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:layout_alignParentTop="true"
        app:theme="@style/AppTheme.ToolbarStyle"
        app:titleTextAppearance="@style/AppTheme.ToolbarTextStyle"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>


    <com.google.android.gms.ads.AdView
        android:id="@+id/banner_pantalla_insertar_datos_zona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toolBar_pantalla_insertar_datos_zona"
        android:layout_marginTop="10dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>


    <android.support.v7.widget.CardView
        android:id="@+id/cardViewNuevaZona"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/banner_pantalla_insertar_datos_zona">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/colorPrimaryDark"
                android:hint="@string/txtEditNombreNuevaZona">

                <EditText
                    android:id="@+id/editNombreZona"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:lines="1"
                    android:maxLines="1"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textColorHint="@color/colorPrimaryDark"
                android:hint="@string/txtEditDescripcionNuevaZona">

                <EditText
                    android:id="@+id/editDescripcionZona"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:gravity="top"
                    android:lines="10"
                    android:maxLines="10"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnSaveZona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@mipmap/ic_disk"
        app:elevation="4dp"
        app:pressedTranslationZ="4dp"
        app:backgroundTint="@color/colorPrimaryDark"
        app:rippleColor="@color/colorBlanco"/>


</RelativeLayout>