<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.gms.ads.AdView
        android:id="@+id/banner_pantalla_detalles_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewTipoSeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:visibility="invisible">

                <LinearLayout
                    android:id="@+id/layoutTipoSeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtTipoSeta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".7"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:textAlignment="center"
                        android:layout_gravity="center_vertical"
                        android:text="Comestible"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="22sp"/>

                    <ImageView
                        android:id="@+id/imgTipoSeta"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/seta_buena_small"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>




            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewNombre"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/titNombre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="10dp"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDark"
                            android:text="@string/titNombre" />

                        <TextView
                            android:id="@+id/txtNombre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/titNombreComun"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="10dp"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDark"
                            android:text="@string/titNombreComun" />

                        <TextView
                            android:id="@+id/txtNombreComun"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewDescripcion"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titDescripcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                        android:text="@string/titDescripcion" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/colorPrimaryDark"/>

                    <TextView
                        android:id="@+id/txtDescripcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textSize="16sp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginTop="20dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical"
                            android:src="@android:drawable/ic_menu_help"/>

                        <TextView
                            android:id="@+id/txtIrAyuda"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_gravity="center_vertical"
                            android:textColor="@color/texto_pulsacion_2"
                            android:clickable="true"
                            android:textSize="14sp"
                            android:text="@string/txtIrAyuda"/>

                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>